tests/expectations/compiler/tuple/singleton_tuple_fail.out
namespace = "Compile"
expectation = "Fail"
outputs = ["""
Error [EPAR0370029]: A tuple type must have at least two elements.
    --> compiler-test:7:16
     |
   7 |         let c: (u8) = (a);
     |                ^^^^"""]
